# EnterpriseVoxelCAD

./: .clang-format  .gitignore  README.md  project.godot
.github/workflows/: ci.yml
docs/: architecture_overview.md  coding_guidelines.md  database_schema.md  engine_extension_points.md
scenes/: main.tscn
src/gdextension/: CMakeLists.txt  register_types.cpp  register_types.hpp  voxel_engine.cpp  voxel_engine.hpp
src/scripts/: CommandParser.gd  Database.gd  LayerSystem.gd  StructuralAnalyzer.gd  TelemetryService.gd  VoxelManager.gd  VoxelProperties.gd
tests/: test_layer_system.gd  test_semantic_commands.gd  test_virtual_block.gd  test_voxel_manager.gd
tools/db/: schema_v1.sql  schema_v2.sql
